@@ -1,6 +1,8 @@
 package JStream.utils;
 
 import java.io.InputStream;
+import java.io.File;
+import java.net.URL;
 
 import javafx.scene.image.Image;
 
@@ -12,11 +14,31 @@ public class ImageUtil {
         try {
             Image img = null;
 
-            if (url != null && !url.trim().isEmpty()) {
-                img = new Image(url, true);
+            // 1. Try loading from URL / file / classpath
+            if (url != null && !url.isBlank()) {
+
+                // Case 1: HTTP or file URL
+                if (url.startsWith("http") || url.startsWith("file:")) {
+                    img = new Image(url, true);
+                } else {
+                    // Case 2: Classpath resource
+                    URL resource = ImageUtil.class.getResource(
+                        url.startsWith("/") ? url : "/" + url
+                    );
+
+                    if (resource != null) {
+                        img = new Image(resource.toExternalForm(), true);
+                    } else {
+                        // Case 3: Local file
+                        File file = new File(url);
+                        if (file.exists()) {
+                            img = new Image(file.toURI().toString(), true);
+                        }
+                    }
+                }
             }
 
-            // If invalid → fallback
+            // 2. Fallback image from resources
             if (img == null || img.isError()) {
                 InputStream is = ImageUtil.class.getResourceAsStream(FALLBACK);
                 if (is != null) {
@@ -24,7 +46,7 @@ public class ImageUtil {
                 }
             }
 
-            // LAST fallback (never null texture)
+            // 3. Last fallback (1px image to avoid crash)
             if (img == null || img.isError()) {
                 img = new Image(
                     "data:image/png;base64," +
@@ -35,6 +57,8 @@ public class ImageUtil {
             return img;
 
         } catch (Exception e) {
+            System.err.println("ImageUtil error: " + e.getMessage());
+
             return new Image(
                 "data:image/png;base64," +
                 "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGNgYAAAAAMAAWgmWQ0AAAAASUVORK5CYII="
